--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.61'
 }
 
+mainClassName = "com.github.nekkan.jdakt.Main"
+
 compileJava.options.encoding = 'UTF-8'
 
 compileKotlin {
