--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ repositories {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile 'net.dv8tion:JDA:4.0.0_73'
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.3.61'
 }
 
